<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:orientation="horizontal" >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_share"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/share"
            android:textStyle="bold"
            android:textColor="#ffffff" />
    <TextView
            android:id="@+id/appliaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_money"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff" />
    <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_setting"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginTop="1dp"
            android:textColor="#ffffff" android:layout_marginRight="10dp"/>
</RelativeLayout>