<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#66CCCC"
              android:baselineAligned="false">
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
        <LinearLayout
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="70dp"
                      android:background="#66CCCC"
                      android:baselineAligned="false">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewLayoutTow"
                    android:gravity="center" android:layout_weight="1">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_margin="5dp"
                           android:src="@drawable/ic_launcher"
                           android:contentDescription="@string/app_name"
                           android:padding="5dp"/>

            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="4">

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/app_title_money"
                              android:id="@+id/goBack"
                              android:textColor="#ffffffff"
                              android:layout_margin="2dp"/>

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/app_test_text"
                              android:textColor="#ffffffff"
                              android:layout_margin="2dp"
                              android:textSize="10sp"
                              android:textStyle="bold"
                              android:layout_gravity="left"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="6">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/app_title_money"
                          android:textColor="#ffffffff"
                          android:layout_margin="2dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/app_test_text"
                          android:textColor="#ffffffff"
                          android:layout_margin="2dp"
                          android:textSize="10sp"
                          android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>